cargo-features = ["public-dependency"]

[package]
name = "moxie-streams"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"

[dependencies]
futures = "^0.3.6"
moxie = { git = "https://github.com/anp/moxie", public = true, rev = "bd7b85f917cd976481e9e45719baab9fa74a782d" }
